Added books, modified creation pages
